-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
3
-
16094
During an HSM archive or restore, the progress is reported by the copytool, in userspace. That value may be bogus. For
instance, this will crash the MDS in interval_set():
he.offset = -1;
he.length = 10;
rc = llapi_hsm_action_progress(hcp, &he, length, 0);
So check that userspace is giving a sane progress extent value.
- is related to
-
LU-15762 Interop: sanity-hsm test_500: mdt_coordinator.c:1629:mdt_hsm_update_request_state()) lustre-MDT0000: Cannot find running request for cookie 0x624a1c9f on fid=[0x2000088da:0xe2:0x0]
-
- Resolved
-